# yasha

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  another_api.py  api.py  compose.yaml  config.yaml  docker-compose.yml  easy-run.sh  easy-test.sh  instruct.py  mship_deploy.py  pyproject.toml  start.py  test.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: rawvllm_entrypoint.py  run.sh
bench/configs/: bench.yaml
config/: models.example.16GB.yaml  models.example.24GB.yaml  models.example.2x16GB.yaml  models.example.8GB.yaml  models.example.ha.yaml  models.example.yaml  models.yaml
config/examples/: README.md  diffusers.yaml  full-stack.yaml  gpu-16gb.yaml  gpu-24gb.yaml  gpu-8gb.yaml  kokoro-tts.yaml  llama-cpp.yaml  mini-pc.yaml  transformers-cpu.yaml  vllm.yaml
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.instruct  Dockerfile.ray
docs/: architecture.md  development.md  grafana-dashboard.json  home-assistant.md  model-configuration.md  monitoring.md  plugins.md  production-readiness.md  prometheus-alerts.yml  quickstart.md  troubleshooting.md
modelship/: logging.py  metrics.py
modelship/deploy/: actor_options.py  config.py  serve_utils.py  strategy.py
modelship/infer/: base_infer.py  base_serving.py  deploy_coordinator.py  infer_config.py  model_deployment.py  model_resolver.py
modelship/infer/custom/: custom_infer.py
modelship/infer/custom/openai/: serving_speech.py  serving_transcription.py
modelship/infer/diffusers/: diffusers_infer.py
modelship/infer/diffusers/openai/: serving_image.py
modelship/infer/llama_cpp/: capabilities.py  llama_cpp_infer.py
modelship/infer/llama_cpp/openai/: serving_chat.py  serving_embedding.py
modelship/infer/transformers/: capabilities.py  transformers_infer.py
modelship/infer/transformers/openai/: serving_chat.py  serving_embedding.py  serving_speech.py  serving_transcription.py
modelship/infer/vllm/: vllm_infer.py
modelship/infer/vllm/openai/: serving_speech.py
modelship/openai/: api.py  auth.py  chat_utils.py  protocol.py
modelship/openai/tool_calling/: __init__.py  input.py  registry.py
modelship/openai/tool_calling/parsers/: __init__.py  base.py  hermes.py
modelship/plugins/: base_plugin.py
modelship/utils/: __init__.py  audio.py  cli.py  openai.py
plugins/bark/: README.md  pyproject.toml
plugins/bark/bark/: __init__.py  bark.py
plugins/kokoro/: README.md  pyproject.toml
plugins/kokoro/kokoro/: __init__.py  kokoro.py
plugins/kokoroonnx/: README.md  pyproject.toml
plugins/kokoroonnx/kokoroonnx/: __init__.py  kokoroonnx.py
plugins/orpheus/: README.md  pyproject.toml
plugins/orpheus/orpheus/: __init__.py  orpheus.py
plugins/whispercpp/: README.md  pyproject.toml
plugins/whispercpp/whispercpp/: __init__.py  whispercpp.py
scripts/: entrypoint.sh  start.sh  start_ray.sh
src/yasha/: client.py
src/yasha/agents/: main.py  simple.py  translator.py
tests/: test_api.py  test_auth.py  test_cache.py  test_config.py  test_integration.py  test_logging.py  test_model_resolver.py  test_mship_deploy.py  test_openai_chat_utils.py  test_openai_utils.py  test_start.py  test_tool_calling.py  test_transformers_capabilities.py  test_transformers_chat_tools.py
yasha/: client.py  logging.py  metrics.py
yasha/agents/: translator.py  wake_word_detector.py
yasha/config/: infer_config.py  models.yaml
yasha/config/models/: instruct.yaml
yasha/infer/: base_infer.py  infer_config.py  model_deployment.py
yasha/infer/custom/: custom_infer.py
yasha/infer/custom/openai/: serving_speech.py
yasha/infer/diffusers/: diffusers_infer.py
yasha/infer/diffusers/openai/: serving_image.py
yasha/infer/transformers/: transformers_infer.py
yasha/infer/transformers/openai/: serving_speech.py
yasha/infer/vllm/: vllm_infer.py
yasha/infer/vllm/openai/: serving_speech.py
yasha/openai/: api.py  auth.py  protocol.py
yasha/plugins/: base_plugin.py
yasha/plugins/tts/: bark.py  orpheus.py
yasha/plugins/tts/bark/: bark.py
yasha/plugins/tts/kokoro/: kokoro.py
yasha/plugins/tts/orpheus/: orpheus.py  orpheus_model.py
yasha/utils/: __init__.py
