[project]
name = "yasha"
version = "0.1.10"
description = "Yet another self-hosted agent"
authors = [
    { name = "Alex Margarit" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "==3.12.10"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "flashinfer-python>=0.6.1",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pydantic>=2.12.0",
    "pydantic-yaml>=1.6.0",
    "python-multipart>=0.0.20",
    "ray[data,default,serve-grpc]>=2.51.1",
    "scipy>=1.16.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.5",
    "vllm==0.18.0",
    "vllm[audio]==0.18.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
kokoro = ["kokoro"]
bark = ["bark"]
orpheus = ["orpheus"]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.400",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
kokoro = { workspace = true }
bark = { workspace = true }
orpheus = { workspace = true }

[tool.uv.build-backend]
module-name = "yasha"
module-root = ""

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["yasha", "plugins"]
exclude = [".cache", ".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["yasha"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "/"
venv = ".venv"
include = ["yasha", "plugins", "start.py"]
exclude = [".cache", ".venv"]
typeCheckingMode = "basic"
