[project]
name = "modelship"
version = "0.1.34"
description = "Self-hosted, multi-model AI inference server. Run LLMs, TTS, STT, embeddings, and image generation with an OpenAI-compatible API."
authors = [
    { name = "Alex Margarit" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
keywords = ["ai", "inference", "vllm", "ray", "openai", "llm", "tts", "stt", "embeddings", "image-generation", "diffusers", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = "==3.12.10"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "pydantic>=2.12.0",
    "pydantic-yaml>=1.6.0",
    "python-multipart>=0.0.20",
    "ray[data,default,serve-grpc]>=2.51.1",
    "librosa>=0.11.0",
    "scipy>=1.16.1",
    "soundfile>=0.13.0",
    "requests>=2.32.5",
    "pip>=25.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.5.3",
    "sentence-transformers>=3.0.0",
    "flashinfer-python>=0.6.1",
    "vllm==0.20.0",
    "vllm[audio]==0.20.0",
    "accelerate>=1.6.0",
    "diffusers>=0.31.0",
    "llama-cpp-python>=0.3.6",
    "onnxruntime-gpu>=1.20.1",
]
cpu = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.5.3",
    "sentence-transformers>=3.0.0",
    "llama-cpp-python>=0.3.6",
    "onnxruntime>=1.20.1",
]
kokoroonnx = ["kokoroonnx"]
bark = ["bark"]
orpheus = ["orpheus"]
whispercpp = ["whispercpp"]
otel = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "ruff>=0.11.0",
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/alez007/modelship"
Documentation = "https://github.com/alez007/modelship/tree/main/docs"
Issues = "https://github.com/alez007/modelship/issues"
Changelog = "https://github.com/alez007/modelship/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["plugins/*"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
kokoroonnx = { workspace = true }
bark = { workspace = true }
orpheus = { workspace = true }
whispercpp = { workspace = true }
torch = [
  { index = "pytorch-cu130", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
  { index = "pytorch-cu130", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]

[tool.uv]
conflicts = [
  [
    { extra = "gpu" },
    { extra = "cpu" },
  ],
]

[tool.uv.build-backend]
module-name = "modelship"
module-root = ""

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["modelship", "plugins"]
exclude = [".cache", ".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["modelship"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "/"
venv = ".venv"
include = ["modelship", "plugins", "mship_deploy.py"]
exclude = [".cache", ".venv"]
typeCheckingMode = "basic"
