[project]
name = "bark"
version = "0.1.0"
description = "Bark TTS plugin for Modelship"
requires-python = "==3.12.10"
dependencies = [
    "modelship",
    "transformers>=4.57.5",
    "torch>=2.10.0",
    "scipy>=1.16.1",
    "numpy>=2.2.6",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
modelship = { workspace = true }

[tool.uv.build-backend]
module-name = "bark"
module-root = ""
