[project]
name = "bark"
version = "0.1.0"
description = "Bark TTS plugin for Modelship"
requires-python = "==3.12.10"
dependencies = []

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
modelship = { workspace = true }

[tool.uv.build-backend]
module-name = "bark"
module-root = ""
