[project]
name = "kokoroonnx"
version = "0.1.0"
description = "Kokoro ONNX TTS plugin for Modelship"
requires-python = "==3.12.10"
dependencies = [
    "modelship",
    "kokoro-onnx[gpu]>=0.4.9",
    "numpy>=2.2.6",
    "onnxruntime-gpu>=1.20.1",
    "scipy>=1.16.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
modelship = { workspace = true }

[tool.uv.build-backend]
module-name = "kokoroonnx"
module-root = ""

