[project]
name = "orpheus"
version = "0.1.0"
description = "Orpheus TTS plugin for Yasha"
requires-python = "==3.12.10"
dependencies = [
    "yasha",
    "snac",
    "transformers>=4.57.5",
    "numpy>=2.2.6",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
yasha = { workspace = true }

[tool.uv.build-backend]
module-name = "orpheus"
module-root = ""
