[project]
name = "orpheus"
version = "0.1.0"
description = "Orpheus TTS plugin for Modelship"
requires-python = "==3.12.10"
dependencies = [
    "snac>=1.2.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
modelship = { workspace = true }

[tool.uv.build-backend]
module-name = "orpheus"
module-root = ""

[tool.modelship]
supports = ["gpu"]
