[project]
name = "whispercpp"
version = "0.1.0"
description = "whisper.cpp STT plugin for Modelship (via pywhispercpp)"
requires-python = "==3.12.10"
dependencies = [
    "pywhispercpp>=1.3.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
modelship = { workspace = true }

[tool.uv.build-backend]
module-name = "whispercpp"
module-root = ""
